--- a/.github/workflows/profile-cards.yml
+++ b/.github/workflows/profile-cards.yml
@@ -3,8 +3,8 @@ name: GitHub-Profile-Summary-Cards
 on:
   create:
   push:
-  schedule: # execute every 24 hours
-    - cron: "* */24 * * *"
+  schedule: # execute 04:14JST. cron is UTC
+    - cron: "14 19 * * *"
   workflow_dispatch:
 
 jobs:
@@ -19,3 +19,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.SUMMARY_CARDS_TOKEN }}
         with:
           USERNAME: ${{ github.repository_owner }}
+
+  lapras-card:
+    name: LAPRAS Card
+    runs-on: ubuntu-latest
+    steps:
+      - uses: kawamataryo/lapras-card-readme@main
+        with:
+          SHARE_ID: "yakumo"
