--- a/.github/workflows/profile-cards.yml
+++ b/.github/workflows/profile-cards.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  github-profile-summary-cards:
     runs-on: ubuntu-latest
     name: generate
     permissions:
